src/objects/Engagement_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>A_Hrs__c</fullName>
        <label>A Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Rev__c</fullName>
        <label>A Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagement Snapshots</relationshipLabel>
        <relationshipName>Engagement_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avg_Weeks__c</fullName>
        <label>Avg Weeks</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Owner__c</fullName>
        <formula>Owner:User.Business_Unit__c + &quot; / &quot; + Owner:User.Full_Name__c</formula>
        <label>BU &amp; Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backlog__c</fullName>
        <label>Backlog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cmplxty__c</fullName>
        <label>Cmplxty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSI_Name__c</fullName>
        <label>DSI Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI_Number__c</fullName>
        <label>DSI Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagement_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Sched__c</fullName>
        <label>On Sched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Comp__c</fullName>
        <label>% Comp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sched__c</fullName>
        <label>Sched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TBSched__c</fullName>
        <label>TBSched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement Snapshot</label>
    <nameField>
        <displayFormat>E-{000000000}</displayFormat>
        <label>Engagement Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>